--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-offset-2 col-xs-8">
+            <div class="col-xs-offset-2 col-xs-8">
                 <h1>Search for item:</h1>
                 <form method="GET" action="{{ url_for('search_inventory') }}">
                     <div class="input-group">
