--- a/app/templates/sale.html
+++ b/app/templates/sale.html
@@ -12,6 +12,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <h1>Current Transaction</h1>
                 <form method="POST" action="{{ url_for('checkout') }}">
                     <table class="table table-hover table-bordered">
                         <thead>
