--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -12,51 +12,58 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h1>Add Inventory</h1>
+                <h1>Add Inventories</h1>
                 <form class="form-horizontal" method="POST" action="{{ url_for('add_inventory') }}">
                     <div class="form-group">
-                        <label for="inventory-name" class="col-xs-2 control-label">Name</label>
-                        <div class="col-xs-10">
-                            <input type="text" class="form-control" id="inventory-name" name="name">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inventory-description" class="col-xs-2 control-label">Description</label>
-                        <div class="col-xs-10">
-                            <textarea class="form-control" rows="4" id="inventory-description" name="description"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inventory-code" class="col-xs-2 control-label">Code</label>
-                        <div class="col-xs-2">
-                            <input type="text" class="form-control" id="inventory-code" name="code">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inventory-price" class="col-xs-2 control-label">Price</label>
-                        <div class="col-xs-2">
-                            <div class="input-group">
-                                <span class="input-group-addon">P</span>
-                                <input type="text" class="form-control" id="inventory-price" name="price">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inventory-stock" class="col-xs-2 control-label">Stock</label>
-                        <div class="col-xs-1">
-                            <input type="number" class="form-control" id="inventory-name" value="0" name="stock">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="inventory-supplier" class="col-xs-2 control-label">Supplier</label>
+                        <label for="category-name" class="col-xs-2 control-label">Category:</label>
                         <div class="col-xs-4">
-                            <input type="text" class="form-control" id="inventory-supplier" name="supplier">
+                            <select class="form-control" id="category-name" name="category">
+                                <option disabled selected value> -- select a category -- </option>
+                                {% for category in categories %}
+                                    <option>{{ category }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-xs-offset-2 col-xs-10">
-                            <button type="submit" class="btn btn-default">Submit</button>
+                        <label for="supplier-name" class="col-xs-2 control-label">Supplier:</label>
+                        <div class="col-xs-4">
+                            <select class="form-control" id="supplier-name" name="supplier">
+                                <option disabled selected value> -- select a supplier -- </option>
+                                {% for supplier in suppliers %}
+                                    <option>{{ supplier }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
+                    </div>
+
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Stock</th>
+                                <th>Name</th>
+                                <th>Description</th>
+                                <th>Code</th>
+                                <th>Price</th>
+                            </tr>
+                        </thead>
+                        {% for i in range(0, 5) %}
+                            <tr>
+                                <td class="col-md-1"><input type="number" class="form-control" id="inventory-name" value="0" name="stock-{{ i }}"></td>
+                                <td><input type="text" class="form-control" id="inventory-name" name="name-{{ i }}"></td>
+                                <td><textarea class="form-control" rows="4" id="inventory-description" name="description-{{ i }}"></textarea></td>
+                                <td class="col-md-1"><input type="text" class="form-control" id="inventory-code" name="code-{{ i }}"></td>
+                                <td class="col-md-2">
+                                    <div class="input-group">
+                                        <span class="input-group-addon">P</span>
+                                        <input type="text" class="form-control" id="inventory-price" name="price-{{ i }}">
+                                    </div>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default col-xs-offset-1 col-xs-10">Submit</button>
                     </div>
                 </form>
             </div>
