--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
             </div>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{{ url_for('add_inventory') }}">Add Item/s</a></li>
+                <li><a href="{{ url_for('view_inventories') }}">Inventories</a></li>
                 <li><a href="{{ url_for('view_categories') }}">Categories</a></li>
                 <li><a href="{{ url_for('view_suppliers') }}">Suppliers</a></li>
                 <li><a href="{{ url_for('view_sale') }}">View Current Transaction ({{ session.get("sales", {}) | item_in_sale }})</a></li>
@@ -22,7 +23,7 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-xs-offset-4 col-xs-6">
+            <div class="col-xs-offset-3 col-xs-6">
                 {% if request.path != '/' %}
                     <form role="search" method="GET" action="{{ url_for('search_inventory') }}">
                         <div class="form-group">
