--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,5 +21,10 @@
                 </form>
             </div>
         </div>
+        <!-- <div class="row">
+            <div class="col-xs-12">
+                <h2>Transactions today:</h2>
+            </div>
+        </div> -->
     </div>
 {% endblock %}
