--- a/app/templates/inventories.html
+++ b/app/templates/inventories.html
@@ -11,7 +11,8 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>Inventory</h1>
-                <table class="table table-hover table-bordered">
+                <h3>Recently Added</h3>
+                <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
                             <th>Stock</th>
@@ -30,7 +31,7 @@
                             <td>{{ item['description'] }}</td>
                             <td>{{ item['code'] }}</td>
                             <td>{{ item['price'] }}</td>
-                        <tr>
+                        </tr>
                     {% endfor %}
                 </table>
             </div>
