--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -10,7 +10,8 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <table class="table table-hover table-bordered">
+                <h2>Search Results:</h2>
+                <table class="table table-hover table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>Stock</th>
@@ -25,12 +26,12 @@
                     {% for item in items %}
                         <tr>
                             <td>{{ item['stock'] }}</td>
-                            <td>{{ item['name'] }}</td>
-                            <td>{{ item['supplier'] }}</td>
+                            <td class="col-md-2">{{ item['name'] }}</td>
+                            <td class="col-md-2">{{ item['supplier'] }}</td>
                             <td>{{ item['description'] }}</td>
-                            <td>{{ item['code'] }}</td>
-                            <td>{{ item['price'] }}</td>
-                            <td>
+                            <td class="col-md-1">{{ item['code'] }}</td>
+                            <td class="col-md-1">{{ item['price'] }}</td>
+                            <td class="col-md-2">
                                 <form method="POST" action="{{ url_for('add_sale') }}" class="form-inline">
                                     <input type="hidden" value="{{ item['id'] }}" name="id">
                                     <input type="hidden" value="{{ item['name'] }}" name="name">
