--- a/app/templates/add.html
+++ b/app/templates/add.html
@@ -68,5 +68,34 @@
                 </form>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Recently Added</h3>
+                <table class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Stock</th>
+                            <th>Name</th>
+                            <th>Category</th>
+                            <th>Supplier</th>
+                            <th>Description</th>
+                            <th>Code</th>
+                            <th>Price</th>
+                        </tr>
+                    </thead>
+                    {% for item in items %}
+                        <tr>
+                            <td>{{ item['stock'] }}</td>
+                            <td>{{ item['name'] }}</td>
+                            <td>{{ item['category'] }}</td>
+                            <td>{{ item['supplier'] }}</td>
+                            <td>{{ item['description'] }}</td>
+                            <td>{{ item['code'] }}</td>
+                            <td>{{ item['price'] }}</td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
     </div>
 {% endblock %}
