--- a/app/templates/inventories.html
+++ b/app/templates/inventories.html
@@ -12,25 +12,31 @@
             <div class="col-md-12">
                 <h1>Inventory</h1>
                 <h3>Recently Added</h3>
-                <table class="table table-striped table-bordered">
+                <table class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th>Stock</th>
                             <th>Name</th>
+                            <th>Category</th>
                             <th>Supplier</th>
                             <th>Description</th>
                             <th>Code</th>
                             <th>Price</th>
+                            <th></th>
                         </tr>
                     </thead>
                     {% for item in items %}
                         <tr>
                             <td>{{ item['stock'] }}</td>
                             <td>{{ item['name'] }}</td>
+                            <td>{{ item['category'] }}</td>
                             <td>{{ item['supplier'] }}</td>
                             <td>{{ item['description'] }}</td>
                             <td>{{ item['code'] }}</td>
                             <td>{{ item['price'] }}</td>
+                            <td class="col-md-1">
+                                <a href="{{ url_for('delete_inventory', item_id=item['id']) }}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                            </td>
                         </tr>
                     {% endfor %}
                 </table>
