--- a/app/templates/inventories.html
+++ b/app/templates/inventories.html
@@ -28,14 +28,16 @@
                     {% for item in items %}
                         <tr>
                             <td>{{ item['stock'] }}</td>
-                            <td>{{ item['name'] }}</td>
+                            <td>
+                                <a href="{{ url_for('edit_inventory', item_id=item['id']) }}">{{ item['name'] }}</a>
+                            </td>
                             <td>{{ item['category'] }}</td>
                             <td>{{ item['supplier'] }}</td>
                             <td>{{ item['description'] }}</td>
                             <td>{{ item['code'] }}</td>
                             <td>{{ item['price'] }}</td>
                             <td class="col-md-1">
-                                <a href="{{ url_for('delete_inventory', item_id=item['id']) }}"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <a href="{{ url_for('delete_inventory', item_id=item['id']) }}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
