--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -26,8 +26,12 @@
                     </thead>
                     {% for item in items %}
                         <tr>
-                            <td>{{ item['stock'] }}</td>
-                            <td class="col-md-2">{{ item['name'] }}</td>
+                            <td>
+                                {{ item['stock'] }}
+                            </td>
+                            <td class="col-md-2">
+                                <a href="{{ url_for('edit_inventory', item_id=item['id']) }}">{{ item['name'] }}</a>
+                            </td>
                             <td class="col-md-2">{{ item['category'] }}</td>
                             <td class="col-md-2">{{ item['supplier'] }}</td>
                             <td>{{ item['description'] }}</td>
