--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -22,6 +22,7 @@
                             <th>Code</th>
                             <th>Price</th>
                             <th></th>
+                            <th></th>
                         </tr>
                     </thead>
                     {% for item in items %}
@@ -54,6 +55,9 @@
                                     </div>
                                     <button class="btn btn-default" type="submit">Add</button>
                                 </form>
+                            </td>
+                            <td>
+                                <a href="{{ url_for('delete_inventory', item_id=item['id'], q=q) }}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
