--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -9,22 +9,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-offset-2 col-xs-8">
-                <h1>Search for item:</h1>
-                <form method="GET" action="{{ url_for('search_inventory') }}">
-                    <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search" name="q">
-                      <span class="input-group-btn">
-                        <button class="btn btn-default" type="submit">Search</button>
-                      </span>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="row">
             <div class="col-xs-12">
-                <h3>{{ date }}</h3>
-                <h2>Transactions today:</h2>
+                <h2>Transactions for {{ date }}:</h2>
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
