--- a/app/templates/sale.html
+++ b/app/templates/sale.html
@@ -13,6 +13,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>Current Transaction</h1>
+                <a href="{{ url_for('clear_sales') }}">clear transaction</a>
                 <form method="POST" action="{{ url_for('checkout') }}">
                     <table class="table table-hover table-bordered">
                         <thead>
