added proper redirection for adding sales

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -48,6 +48,7 @@
                                     <input type="hidden" value="{{ item['price'] }}" name="price">
                                     <input type="hidden" value="{{ item['supplier'] }}" name="supplier">
                                     <input type="hidden" value="{{ item['stock'] }}" name="stock">
+                                    <input type="hidden" value="{{ q }}" name="query">
 
                                     <div class="form-group">
                                         <label>Quantity:</label>
