--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,8 @@
     {% block head %}
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}" rel="stylesheet">
+
+    <script src="{{ url_for('static', filename='js/jquery-1.12.0.min.js') }}" charset="utf-8"></script>
     {% endblock %}
 </head>
 <body style="margin-bottom: 50px;">
@@ -22,6 +24,15 @@
         </div>
     </nav>
     <div class="container">
+        <div class="row">
+            <div class="col-xs-2">
+                <h5>User:</h5>
+                <select class="form-control" onchange="$.get('{{ url_for('change_user') }}', {user: this.options[this.selectedIndex].value})">
+                    <option {% if session['user'] == "Paco Roman" %} selected {% endif %}>Paco Roman</option>
+                    <option {% if session['user'] == "General Tinio" %} selected {% endif %}>General Tinio</option>
+                </select>
+            </div>
+        </div>
         <div class="row">
             <div class="col-xs-offset-3 col-xs-6">
                 {% if request.path != '/' %}
