--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <h2>Transactions for {{ date }}:</h2>
+                <h2>Paco Roman Transactions for {{ date }}:</h2>
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
                         <tr>
@@ -24,7 +24,7 @@
                             <th></th>
                         </tr>
                     </thead>
-                    {% for item in transactions %}
+                    {% for item in paco_roman_transactions %}
                         <tr>
                             <td>{{ item['quantity'] }}</td>
                             <td>{{ item['name'] }}</td>
@@ -51,7 +51,57 @@
                         </tr>
                     {% endfor %}
                 </table>
-                <strong>Total:</strong> P {{ total }}
+                <strong>Total:</strong> P {{ paco_roman_total }}
+            </div>
+        </div>
+        <br>
+        <div class="row">
+            <div class="col-xs-12">
+                <h2>General Tinio Transactions for {{ date }}:</h2>
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Quantity</th>
+                            <th>Name</th>
+                            <th>Category</th>
+                            <th>Supplier</th>
+                            <th>Description</th>
+                            <th>Code</th>
+                            <th>Sold</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    {% for item in gen_tinio_transactions %}
+                        <tr>
+                            <td>{{ item['quantity'] }}</td>
+                            <td>{{ item['name'] }}</td>
+                            <td>{{ item['category'] }}</td>
+                            <td>{{ item['supplier'] }}</td>
+                            <td>{{ item['description'] }}</td>
+                            <td>{{ item['code'] }}</td>
+                            <td>{{ item['actual'] }}</td>
+                            <td class="col-md-1">
+                                <form method="POST" action="{{ url_for('return_sale') }}" class="form-inline">
+                                    <input type="hidden" value="{{ item['id'] }}" name="sale_id">
+                                    <input type="hidden" value="{{ item['inventories.id'] }}" name="item_id">
+                                    <input type="hidden" value="{{ item['quantity'] }}" name="quantity">
+                                    <input type="hidden" value="{{ item['date'] }}" name="date">
+
+                                    <div class="form-group">
+                                        <label>Quantity:</label>
+                                        <input type="text" class="form-control" name="returnee" value="1" size="5">
+                                    </div>
+
+                                    <button class="btn btn-default" type="submit" onclick="return confirm('Are you sure?')">Return</button>
+                                </form>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+                <strong>Total:</strong> P {{ gen_tinio_total }}
+                <br>
+                <br>
+                <strong>Combined Total:</strong> P {{ combined_total }}
             </div>
         </div>
         <br>
