--- a/app/templates/inventories.html
+++ b/app/templates/inventories.html
@@ -11,6 +11,42 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>Inventory</h1>
+                <h3>No stocks</h3>
+                <table class="table table-striped table-bordered table-hover">
+                    <thead>
+                        <tr>
+                            <th>Stock</th>
+                            <th>Name</th>
+                            <th>Category</th>
+                            <th>Supplier</th>
+                            <th>Description</th>
+                            <th>Code</th>
+                            <th>Price</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    {% for item in no_stocks %}
+                        <tr>
+                            <td>{{ item['stock'] }}</td>
+                            <td>
+                                <a href="{{ url_for('edit_inventory', item_id=item['id']) }}">{{ item['name'] }}</a>
+                            </td>
+                            <td>{{ item['category'] }}</td>
+                            <td>{{ item['supplier'] }}</td>
+                            <td>{{ item['description'] }}</td>
+                            <td>{{ item['code'] }}</td>
+                            <td>{{ item['price'] }}</td>
+                            <td class="col-md-1">
+                                <a href="{{ url_for('delete_inventory', item_id=item['id']) }}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
                 <h3>Recently Added</h3>
                 <table class="table table-striped table-bordered table-hover">
                     <thead>
