--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -8,6 +8,7 @@
     {{ super() }}
 
     <div class="container">
+        {% if show == 'yes' %}
         <div class="row">
             <div class="col-xs-12">
                 <h3>{{ month }}</h3>
@@ -30,6 +31,7 @@
                 <strong>Profit:</strong> {{ gen_tinio_profit }}
             </div>
         </div>
+        {% endif %}
         
         <div class="row">
             <div class="col-xs-12">
