--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -45,6 +45,9 @@
                             <th>Supplier</th>
                             <th>Description</th>
                             <th>Code</th>
+                            {% if show == 'yes' %}
+                            <th>Converted Code</th>
+                            {% endif %}
                             <th>Sold</th>
                             <th></th>
                         </tr>
@@ -57,6 +60,9 @@
                             <td>{{ item['supplier'] }}</td>
                             <td>{{ item['description'] }}</td>
                             <td>{{ item['code'] }}</td>
+                            {% if show == 'yes' %}
+                            <td>{{ item['converted_code'] }} x {{ item['quantity'] }} = {{ item['converted_code'] * item['quantity'] }}</td>
+                            {% endif %}
                             <td>{{ item['actual'] }}</td>
                             <td class="col-md-1">
                                 <form method="POST" action="{{ url_for('return_sale') }}" class="form-inline">
@@ -92,6 +98,9 @@
                             <th>Supplier</th>
                             <th>Description</th>
                             <th>Code</th>
+                            {% if show == 'yes' %}
+                            <th>Converted Code</th>
+                            {% endif %}
                             <th>Sold</th>
                             <th></th>
                         </tr>
@@ -104,6 +113,9 @@
                             <td>{{ item['supplier'] }}</td>
                             <td>{{ item['description'] }}</td>
                             <td>{{ item['code'] }}</td>
+                            {% if show == 'yes' %}
+                            <td>{{ item['converted_code'] }} x {{ item['quantity'] }} = {{ item['converted_code'] * item['quantity'] }}</td>
+                            {% endif %}
                             <td>{{ item['actual'] }}</td>
                             <td class="col-md-1">
                                 <form method="POST" action="{{ url_for('return_sale') }}" class="form-inline">
