--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
     <link href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}" rel="stylesheet">
 
     <script src="{{ url_for('static', filename='js/jquery-1.12.0.min.js') }}" charset="utf-8"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}" charset="utf-8"></script>
     {% endblock %}
 </head>
 <body style="margin-bottom: 50px;">
@@ -15,6 +16,7 @@
                 <a class="navbar-brand" href="{{ url_for('index') }}">Motoren</a>
             </div>
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="{{ url_for('view_transfer') }}">Transfers</a></li>
                 <li><a href="{{ url_for('add_inventory') }}">Add Item/s</a></li>
                 <li><a href="{{ url_for('view_inventories') }}">Inventories</a></li>
                 <li><a href="{{ url_for('view_categories') }}">Categories</a></li>
@@ -35,7 +37,7 @@
         </div>
         <div class="row">
             <div class="col-xs-offset-3 col-xs-6">
-                {% if request.path != '/' %}
+                {% if request.path != '/' and request.path != '/transfer/view' %}
                     <form role="search" method="GET" action="{{ url_for('search_inventory') }}">
                         <div class="form-group">
                             <div class="input-group">
