--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -131,7 +131,11 @@
                                 </form>
                             </td>
                             <td>
-                                <a href="{{ url_for('delete_inventory', item_id=item['id'], q=q) }}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <a href="{{ url_for('delete_inventory', item_id=item['id'], q=q) }}" onclick="return confirm('Are you sure to delete this item?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <br>
+                                <br>
+                                <br>
+                                <a href="{{ url_for('reset_transfer', item_id=item['id'], q=q) }}" onclick="return confirm('Are you sure to reset transfers?')"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
