added post in delete

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -131,7 +131,7 @@
                                 </form>
                             </td>
                             <td>
-                                <a href="{{ url_for('delete_inventory', item_id=item['id'], q=q) }}" onclick="return confirm('Are you sure to delete this item?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <a href="#" onclick="delete_inventory()"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                                 <br>
                                 <br>
                                 <br>
