--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,13 @@
 
     <script src="{{ url_for('static', filename='js/jquery-1.12.0.min.js') }}" charset="utf-8"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}" charset="utf-8"></script>
+
+    <script type="text/javascript">
+        function delete_inventory(item_id, q) {
+            if(confirm('Are you sure to delete this item?'))
+                $.post("{{ url_for('delete_inventory') }}", {item_id: item_id, q: q});
+        }
+    </script>
     {% endblock %}
 </head>
 <body style="margin-bottom: 50px;">
