--- a/app/templates/inventories.html
+++ b/app/templates/inventories.html
@@ -37,7 +37,7 @@
                             <td>{{ item['code'] }}</td>
                             <td>{{ item['price'] }}</td>
                             <td class="col-md-1">
-                                <a href="{{ url_for('delete_inventory', item_id=item['id']) }}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <a href="#" onclick="delete_inventory()"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -73,7 +73,7 @@
                             <td>{{ item['code'] }}</td>
                             <td>{{ item['price'] }}</td>
                             <td class="col-md-1">
-                                <a href="{{ url_for('delete_inventory', item_id=item['id']) }}" onclick="return confirm('Are you sure?')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <a href="#" onclick="delete_inventory()"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                             </td>
                         </tr>
                     {% endfor %}
