--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -131,7 +131,7 @@
                                 </form>
                             </td>
                             <td>
-                                <a href="#" onclick="delete_inventory()"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                                <a href="" onclick="delete_inventory('{{ item['id'] }}', '{{ q }}')"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
                                 <br>
                                 <br>
                                 <br>
